Fix horizontal scroll on mobile; fix margins between form_grid_blocks on mobile; other style fixes

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -70,12 +70,12 @@ body {
 
 // Works like `no-gutters` for Bootstrap's `.row`.
 .sm-gutters {
-  margin-left: -10px;
-  margin-right: -10px;
+  margin-left: -5px;
+  margin-right: -5px;
 
   > div[class*="col-"] {
-    padding-right: 10px;
-    padding-left: 10px;
+    padding-right: 5px;
+    padding-left: 5px;
   }
 }
 
